Fix overflow x on body

--- a/docs/main.css
+++ b/docs/main.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .github-corner svg {
     z-index: 1000;
 }
